Fixing fontsizes and overflow

--- a/frontend-next-migration/src/preparedPages/MembersPage/ui/MembersPage.module.scss
+++ b/frontend-next-migration/src/preparedPages/MembersPage/ui/MembersPage.module.scss
@@ -16,12 +16,6 @@
 .workersSection {
   z-index: 2;
   width: 112% !important;
-
-  @media only screen and (min-width: 1921px) {
-    * {
-      font-size: xxx-large !important;
-    }
-  }
 }
 
 .wholePageBG {
@@ -47,6 +41,10 @@
   max-width: 80vw !important;
   margin-left: -0.6vw !important;
   background-attachment: none;
+
+   > aside {
+    overflow: hidden;
+  }
 }
 
 .TeamPageSidebarMobile{
